# EasySM

./: CMakeLists.txt  LICENSE  README.md
include/: core.hpp  state_management.hpp
include/easysm/: core.hpp  state_management.hpp
src/: core.cpp  example.cpp  state_management.cpp
